# ThreeJS

./: .env.example  .eslintrc.cjs  .gitignore  README.md  clear-cache.js  console.txt  cypress.config.js  cypress.env.json  download-and-compile-go.sh  eslint.config.js  globals.css  index.html  package-lock.json  package.json  patterns.txt  run-cypress-headless.sh  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts  vitest.setup.ts  webpack.config.js
rust-backend/: Cargo.toml
src/: App.test.tsx  App.tsx  App2.tsx  Cargo.toml  ComponentScene.tsx  FlyThroughExperience.tsx  Homepage.test.tsx  Homepage.tsx  RobustThreeApp.tsx  ThreeScene.tsx  anthropic-ai.tsx  claudeIntegration.tsx  controls_FeatherControls.ts  index.css  index.html  index.tsx  main.rs  main.tsx  setupTests.ts  src_types.ts  types.ts  utils.test.ts  utils.ts
src/app/: layout.tsx
src/components/: BasicThreeScene.tsx  CanvasFallback.tsx  ClaudeVisualization.spec.tsx  ClaudeVisualization.tsx  ContextAwareCanvas.tsx  CopilotVisualization.spec.tsx  CopilotVisualization.tsx  DampedOscillation.tsx  EnhancedWebGLHandler.tsx  ErrorBoundary.tsx  Global.js  GrokVisualization.spec.tsx  GrokVisualization.tsx  InteractiveNeuralNetwork.tsx  LightweightScene.tsx  LlamaCore.spec.tsx  LlamaCore.stories.tsx   LlamaCore.tsx  LlamaCore_2D.spec.tsx  LlamaCore_2D.tsx  MonitorComponents.stories.tsx  MonitorComponents.tsx  Nodes.test.tsx  Nodes.tsx  OptimizedOrbitControls.tsx  QuestDBConnector.tsx  RadarVisualization.stories.tsx  RadarVisualization.tsx  TerrainRadarMapping.stories.tsx  (+12 more)
(+44 files in other folders)
