# rust-backend/Cargo.toml
[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"  # Or "2018" if you need older compatibility

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
anthropic = "0.2.0"